# dlt-fb-poc

./: .env.example  .gitignore  .mcp.json  README.md  _async_insights.py  _rate_limit_telemetry.py  docker-compose.yml  facebook_marketing_pipeline.py  main.py  pyproject.toml
.schema/creative_performance/: facebook_marketing.dbml  ontology.ison  ontology.md  taxonomy.json
notebooks/: lakehouse_demo.py
pipelines/: _smoke_gcs.py  facebook_assets_to_gcs.py  facebook_unify_ods.py
