[project]
name = "dlt-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,workspace,filesystem,gs,parquet]>=1.25.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.0.0",
    "gcsfs>=2024.10.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pyyaml>=6.0",
    "marimo>=0.10",
    "duckdb>=1.1",
    "altair>=5",
    "pandas>=2",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.1",
    "playwright>=1.59.0",
]
